--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <strong>How satisfied are you with our <br /> customer support performance?</strong>
       <div class="ratings-container">
         <div class="rating">
-          <img src="https://image.flaticon.com/icons/svg/187/187150.svg" alt="">
+          <img src="angry.png" alt="">
           <small>Unhappy</small>
         </div>
 
         <div class="rating">
-          <img src="https://image.flaticon.com/icons/svg/187/187136.svg" alt=""/>
+          <img src="emoji.png" alt=""/>
           <small>Neutral</small>
         </div>
 
